[tool.poetry]
name = "mtc"
version = "0.1.0"
description = ""
authors = ["Yucheng <g1677321@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
pandas = "2.0.3"
scapy = "2.4.5"
scipy = "1.10.1"
torch = "2.1.1"
torcheval = "0.0.7"
scikit-learn = "1.3.2"
tqdm = "4.66.1"
matplotlib = "3.7.4"
wandb = "0.16.0"
torchinfo = "1.8.0"
torchvision = "0.16.1"
numpy = "1.24.4"
conda-lock = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
